<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTransactionActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTransactionCategory"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgTransactionType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetTransactionCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_category" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spnTransactionMethod"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:entries="@array/transactionmethod"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdgTransactionType"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"

        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnTransactionMethod">

        <RadioButton
            android:id="@+id/rdoIncome"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/rdoExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTransactionAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionCategory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetTransactionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTransactionNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_notes" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imbDate"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTransactionNotes"
       android:src="@drawable/ic_date_range_black_24dp" />
<TextView
    android:id="@+id/txtDate"
    android:layout_width="match_parent"
    android:text="TextView"
    android:textSize="20sp"
    android:textStyle="bold"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/imbDate"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />
</androidx.constraintlayout.widget.ConstraintLayout>